--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,29 +1,188 @@
 @import 'bootstrap.min.css';
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600;700;800;900&display=swap');
 
 html {
   scroll-behavior: initial !important;
 }
 
+body {
+  font-family: 'Raleway', sans-serif;
+  font-size: 18px;
+  line-height: 1.4;
+  -webkit-font-feature-settings: "lnum";
+  -moz-font-feature-settings: "lnum";
+  font-feature-settings: "lnum";
+}
+
+@media (min-width: 1200px) {
+  .container, .container-lg, .container-md, .container-sm, .container-xl, .container-xxl {
+    max-width: 1180px;
+  }
+}
+
+@media (min-width: 1400px) {
+  .container, .container-lg, .container-md, .container-sm, .container-xl, .container-xxl {
+    max-width: 1200px;
+  }
+}
+
+/* HEADER */
 header {
   position: absolute;
   left: 0;
   right: 0;
   z-index: 10;
-  top: 0;
+  top: 15px;
+}
+.header-logo {
+  flex: 0 0 auto;
+  width: 25%;
+}
+.header-logo img {
+  width: 200px;
+}
+.header-nav {
+  flex: 0 0 auto;
+  width: 50%;
+}
+.header-nav ul {
+  display: flex;
+  justify-content: center;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+.header-nav ul li a {
+  padding: 10px 15px;
+  color: #fff;
+  font-weight: 600;
+  font-size: 16px;
+  text-decoration: none;
+  text-transform: uppercase;
+}
+.header-tel {
+  flex: 0 0 auto;
+  width: 25%;
+  text-align: right;
+}
+.header-tel-inner {
+  display: inline-block;
+  text-align: center;
+}
+.header-tel a {
+  display: block;
+  color: #fff;
+  text-decoration: none;
+  line-height: 1;
+  font-size: 24px;
+  font-weight: 700;
+}
+.header-tel span {
+  color: #5ddbd2;
+  font-weight: 600;
+  font-size: 13px;
+  border-bottom: 1px solid;
+}
+/* HEADER */
+
+.btn-secondary {
+  background-color: #5ddbd2;
+  border-color: #5ddbd2;
+  color: #333;
+  line-height: 1;
+  padding: 16px 40px;
+  font-weight: 600;
+}
+.btn-secondary:hover {
+  background-color: #7ce7df;
+  border-color: #7ce7df;
+  color: #333;
 }
 
 .hero {
-  height: 650px;
-  background-color: #217345;
+  height: 600px;
+  background-color: #4c33e4;
   position: relative;
   overflow: hidden;
+  z-index: 0;
+}
+.hero:after {
+  content: '';
+  background: url('/img/hero-bg-v2.png');
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+  opacity: 0.2;
+}
+.hero .container {
+  position: relative;
+  height: 100%;
+}
+.hero-inner {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  margin-top: 25px;
+}
+.hero-inner h1 {
+  font-size: 64px;
+  color: #fff;
+  margin-top: 0;
+  margin-bottom: 40px;
+  font-weight: 700;
+  line-height: 1.1;
+}
+.hero-inner ul {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  margin-bottom: 40px;
+}
+.hero-inner ul li {
+  color: #fff;
+  margin-bottom: 10px;
+  position: relative;
+  padding-left: 25px;
+}
+.hero-inner ul li:last-child {
+  margin-bottom: 0;
+}
+.hero-inner ul li::before {
+  position: absolute;
+  content: '';
+  display: block;
+  width: 15px;
+  height: 2px;
+  top: 50%;
+  transform: translateY(-50%);
+  background-color: #5ddbd2;
+  left: 0;
 }
 .hero-circle {
   position: absolute;
   width: 750px;
-  left: 818px;
+  right: -340px;
   top: 133px;
   height: 760px;
   border-radius: 3000px;
-  background-color: #f8f6ec;
+  background-color: #5ddbd2;
+}
+@media (min-width: 1400px) {
+  .hero-circle {
+    right: -330px;
+  }
+}
+.hero-circle img {
+  position: absolute;
+  width: 680px;
+  right: 280px;
+  top: -50px;
 }
