--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10,6 +10,7 @@ html {
 }
 
 body {
+  background-color: #f8f9fd;
   font-family: 'Raleway', sans-serif;
   font-size: 18px;
   line-height: 1.4;
@@ -188,3 +189,34 @@ header {
   right: 280px;
   top: -50px;
 }
+
+
+/* PROF CALC */
+.prof-calc {
+  padding-top: 50px;
+  padding-top: 50px;
+}
+.prof-calc-wrapper {
+  padding: 0 50px;
+  background-color: #fff;
+  box-shadow: 0 0 3px #878c9e08, 0 4px 8px #878c9e14;
+}
+.prof-calc-result {
+  border-left: 2px solid #EDEFF8;
+  padding-left: 40px;
+  text-align: right;
+  padding: 100px 0;
+}
+.prof-calc-result span {
+  font-size: 60px;
+  font-weight: 600;
+}
+/* PROF CALC */
+
+
+
+/* FOOTER */
+footer {
+  margin-top: 200px;
+}
+/* FOOTER */
