--- a/public/css/app.css
+++ b/public/css/app.css
@@ -126,11 +126,13 @@ header {
 
 
 .hero {
-  height: 600px;
+  height: 670px;
   background-color: #4c33e4;
   position: relative;
   overflow: hidden;
   z-index: 0;
+  border-bottom-left-radius: 40px;
+  border-bottom-right-radius: 40px;
 }
 .hero:after {
   content: '';
@@ -319,6 +321,8 @@ header {
   background-color: #4c33e4;
   position: relative;
   z-index: 0;
+  border-radius: 40px;
+  overflow: hidden;
 }
 .catalog:after {
   content: '';
@@ -384,8 +388,241 @@ header {
 
 
 
+/* CONTACT */
+.contact {
+  padding-top: 80px;
+  padding-bottom: 80px;
+  position: relative;
+}
+.contact .block-title {
+  margin-bottom: 60px;
+}
+.contact-form {
+  padding: 45px 50px;
+  background-color: #fff;
+  box-shadow: 0 0 3px #878c9e08, 0 4px 8px #878c9e14;
+  box-shadow: 0 4px 16px #878c9e3d;
+  border-radius: 30px;
+  position: relative;
+  width: 550px;
+  margin: 0 auto;
+}
+.contact-form .form-label {
+  font-weight: 600;
+}
+.contact-form .form-control {
+  padding: 0 10px;
+  height: 50px;
+  line-height: 50px;
+  border: 2px solid #dbe4ff;
+}
+.contact-form .form-control:focus {
+  outline: none !important;
+  border-color: #4c33e4;
+  box-shadow: none;
+}
+.contact-form textarea.form-control {
+  height: 150px;
+  resize: vertical;
+}
+/* CONTACT */
+
+
+
+/* STEPS */
+.steps {
+  padding-top: 80px;
+  padding-bottom: 80px;
+}
+.steps .block-title {
+  margin-bottom: 60px;
+}
+.col-step {
+  flex: 0 0 auto;
+  width: 25%;
+}
+.step-item span {
+  width: 70px;
+  height: 70px;
+  line-height: 70px;
+  background-color: #4c33e4;
+  color: #fff;
+  display: block;
+  margin-bottom: 30px;
+  text-align: center;
+  border-radius: 100%;
+  font-weight: 700;
+  font-size: 30px;
+}
+.step-item p strong {
+  display: block;
+  font-size: 20px;
+  margin-bottom: 20px;
+}
+.row-steps {
+  position: relative;
+}
+.row-steps:before {
+  content: '';
+  display: block;
+  position: absolute;
+  top: 0;
+  background: url('/img/line.svg');
+  background-position: 21% 50%;
+  background-size: contain;
+  background-repeat: no-repeat;
+  height: 75px;
+  width: 100%;
+  z-index: -1;
+}
+/* STEPS */
+
+
+/* REVIEWS */
+.reviews {
+  padding-top: 80px;
+  padding-bottom: 120px;
+  background-color: #4c33e4;
+  position: relative;
+  z-index: 0;
+  border-radius: 40px;
+  overflow: hidden;
+}
+.reviews:after {
+  content: '';
+  background: url('/img/hero-bg-v2.png');
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-size: cover;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  z-index: -2;
+  opacity: 0.2;
+}
+.reviews .block-title {
+  margin-bottom: 40px;
+  color: #fff;
+}
+.review-item {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+}
+.review-item:before {
+  content: '';
+  display: block;
+  width: 350px;
+  height: 350px;
+  border-radius: 100%;
+  background-color: #5ddbd2;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  margin-left: 130px;
+  margin-top: 100px;
+  z-index: -1;
+}
+.review-item-photo {
+  height: 350px;
+  width: 50%;
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center center;
+  background-color: #fff;
+  border-radius: 25px;
+  margin-right: 70px;
+  border: 15px solid #fff;
+}
+.review-item-screen {
+  width: 280px;
+  height: 450px;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center center;
+  
+}
+/* REVIEWS */
+
+
 /* FOOTER */
 footer {
-  margin-top: 200px;
+  color: #c5c8d6;
+}
+.footer-top {
+  background-color: #040527;
+  padding: 25px 0;
+}
+.footer-logo {
+  flex: 0 0 auto;
+  width: 25%;
+}
+.footer-logo img {
+  width: 200px;
+}
+.footer-nav {
+  flex: 0 0 auto;
+  width: 75%;
+}
+.footer-nav ul {
+  display: flex;
+  justify-content: flex-end;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+.footer-nav ul li {
+  margin-left: 30px;
+}
+.footer-nav ul li a {
+  padding: 15px 15px;
+  color: #c5c8d6;
+  font-weight: 600;
+  font-size: 16px;
+  text-decoration: none;
+  text-transform: uppercase;
+}
+.footer-bottom {
+  background-color: #373e51;
+  padding: 35px;
+  font-size: 15px;
+}
+.footer-bottom p {
+  margin-bottom: 60px;
+}
+.footer-bottom ul {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  display: flex;
+}
+.footer-bottom ul li {
+  margin-right: 20px;
+  border-bottom: 1px solid;
+}
+.footer-bottom ul li:first-child {
+  border-bottom: none;
+}
+.footer-bottom .footer-tel-address {
+  text-align: right;
+}
+.footer-bottom .footer-tel-address a {
+  color: #c5c8d6;
+  font-size: 24px;
+  font-weight: 600;
+  text-decoration: none;
+  color: #5ddbd2;
+}
+.footer-bottom .footer-tel-address span {
+  display: block;
+  margin-top: 10px;
+  color: #fff;
+  font-size: 16px;
 }
 /* FOOTER */
