--- a/public/css/app.css
+++ b/public/css/app.css
@@ -99,6 +99,16 @@ header {
   border-radius: 35px;
   font-size: 18px;
 }
+.btn-outline-primary {
+  background-color: transparent;
+  border-color: #4c33e4;
+  color: #4c33e4;
+  line-height: 1;
+  padding: 22px 48px;
+  font-weight: 600;
+  border-radius: 35px;
+  font-size: 18px;
+}
 .btn-secondary {
   background-color: #5ddbd2;
   border-color: #5ddbd2;
@@ -619,6 +629,112 @@ header {
   height: 35px;
 }
 /* REVIEWS */
+
+
+
+/* QUIZ */
+.quiz {
+  text-align: center;
+  background-color: #fff;
+  box-shadow: 0 4px 16px #878c9e3d;
+  border-radius: 35px;
+  padding: 60px 30px;
+}
+.quiz .btn-primary,
+.quiz .btn-outline-primary {
+  font-size: 16px;
+  padding: 16px 28px;
+}
+.quiz p {
+  font-size: 30px;
+  font-weight: 600;
+  margin: 0;
+}
+.quiz ul {
+  padding: 0;
+  margin: 0;
+  list-style: none;
+  display: flex;
+  justify-content: center;
+  height: 300px;
+  align-items: center;
+  flex-wrap: wrap;
+  align-content: center;
+  width: 900px;
+  margin: 0 auto;
+}
+.quiz ul li {
+  margin: 10px;
+  width: 45%;
+}
+.quiz ul li.card-large {
+  width: 30%;
+}
+.quiz ul li button {
+  background-color: #fff;
+  border: 2px solid #eee;
+  padding: 10px 20px;
+  border-radius: 10px;
+  font-size: 18px;
+  font-weight: 500;
+  color: #040527;
+  margin: 0 15px;
+  width: 100%;
+  height: 100px;
+  text-align: left;
+  display: flex;
+  align-items: center;
+}
+.quiz ul li button img {
+  width: 40px;
+  margin-right: 20px;
+  display: inline-flex;
+}
+.quiz ul li button span {
+  display: inline-flex;
+}
+.quiz ul li.card-large button {
+  flex-wrap: wrap;
+  width: 100%;
+  height: auto;
+  overflow: hidden;
+  padding: 0;
+}
+.quiz ul li.card-large button img {
+  flex: 0 0 auto;
+  width: 100%;
+  height: 175px;
+}
+.quiz ul li.card-large button span {
+  flex: 0 0 auto;
+  width: 100%;
+  padding: 10px 25px;
+  justify-content: center;
+}
+.quiz ul li .form-control {
+  height: 70px;
+  width: 100%;
+  font-size: 24px;
+  border: 2px solid #eee;
+  margin: 0 15px;
+}
+
+
+.fadein {
+  opacity: 1;
+  -webkit-animation: fadeIn ease 0.75s;
+          animation: fadeIn ease 0.75s;
+}
+@-webkit-keyframes fadeIn {
+  0% { opacity: 0 }
+  100% { opacity: 1 }
+}
+@keyframes fadeIn {
+  0% { opacity: 0 }
+  100% { opacity: 1 }
+}
+/* QUIZ */
+
 
 
 /* FOOTER */
