--- a/public/css/front.css
+++ b/public/css/front.css
@@ -153,8 +153,8 @@ header.header-index {
     top: 0;
     bottom: 0;
     z-index: 100;
-    height: 100%;
-    width: 100%;
+    height: 100vh;
+    width: 100vw;
     background-color: rgba(76,51,228,0.85);
     padding: 35px;
     padding-top: 120px;
@@ -164,12 +164,12 @@ header.header-index {
             animation-duration: 0.5s;
 }
 @-webkit-keyframes mobile-menu {
-    from {width: 0%;}
-    to {width: 100%;}
+    from {right: -100vw;}
+    to {right: 0;}
   }
 @keyframes mobile-menu {
-    from {width: 0%;}
-    to {width: 100%;}
+    from {right: -100vw;}
+    to {right: 0;}
   }
 .mobile-menu nav ul {
     padding: 0;
