--- a/resources/css/front.css
+++ b/resources/css/front.css
@@ -151,8 +151,8 @@ header.header-index {
     top: 0;
     bottom: 0;
     z-index: 100;
-    height: 100vh;
-    width: 100vw;
+    height: 100%;
+    width: 100%;
     background-color: rgba(76,51,228,0.92);
     padding: 35px;
     padding-top: 120px;
@@ -160,7 +160,7 @@ header.header-index {
     animation-duration: 0.5s;
 }
 @keyframes mobile-menu {
-    from {right: -100vw;}
+    from {right: -100%;}
     to {right: 0;}
   }
 .mobile-menu nav ul {
