--- a/resources/css/front.css
+++ b/resources/css/front.css
@@ -189,7 +189,7 @@ header.header-index {
     font-size: 70px;
     line-height: 1;
     position: absolute;
-    right: 13px;
+    right: 0;
     top: 0;
     font-weight: 100;
     color: #fff;
