--- a/public/css/front.css
+++ b/public/css/front.css
@@ -201,7 +201,7 @@ header.header-index {
     font-size: 70px;
     line-height: 1;
     position: absolute;
-    right: 0;
+    right: 5vh;
     top: 0;
     font-weight: 100;
     color: #fff;
