--- a/resources/css/front.css
+++ b/resources/css/front.css
@@ -193,7 +193,7 @@ header.header-index {
     font-size: 70px;
     line-height: 1;
     position: absolute;
-    right: 5vh;
+    right: 1vw;
     top: 0;
     font-weight: 100;
     color: #fff;
