--- a/public/css/front.css
+++ b/public/css/front.css
@@ -152,7 +152,7 @@ header.header-index {
     padding: 0;
 }
 .mobile-menu {
-    position: fixed;
+    position: absolute;
     right: 0;
     top: 0;
     bottom: 0;
@@ -178,8 +178,6 @@ header.header-index {
     margin: 0;
     list-style: none;
     text-align: center;
-    padding: 35px;
-    margin-top: 30px;
 }
 .mobile-menu ul li {
     margin-bottom: 25px;
@@ -201,7 +199,7 @@ header.header-index {
     font-size: 70px;
     line-height: 1;
     position: absolute;
-    right: 15px;
+    right: 0;
     top: 0;
     font-weight: 100;
     color: #fff;
