--- a/resources/css/front.css
+++ b/resources/css/front.css
@@ -150,7 +150,7 @@ header.header-index {
     padding: 0;
 }
 .mobile-menu {
-    position: absolute;
+    position: fixed;
     right: 0;
     top: 0;
     bottom: 0;
@@ -190,12 +190,12 @@ header.header-index {
     background: none;
     font-size: 70px;
     line-height: 1;
-    position: absolute;
-    right: 0;
-    top: 0;
     font-weight: 100;
     color: #fff;
     z-index: 110;
+    display: block;
+    text-align: right;
+    width: 100%;
 }
 /* HEADER */
 
