--- a/resources/css/front.css
+++ b/resources/css/front.css
@@ -159,8 +159,9 @@ header.header-index {
     height: 100%;
     width: 100%;
     background-color: rgba(76,51,228,0.92);
-    animation-name: mobile-menu;
-    animation-duration: 0.5s;
+    /* animation-name: mobile-menu;
+    animation-duration: 0.5s; */
+    display: block !important;
 }
 @keyframes mobile-menu {
     from {right: -100%;}
