--- a/public/css/front.css
+++ b/public/css/front.css
@@ -15,6 +15,7 @@ body {
   font-family: 'Raleway', sans-serif;
   font-size: 16px;
   line-height: 1.4;
+  position: relative;
   font-feature-settings: "lnum";
 }
 @media (min-width: 992px) {
@@ -37,6 +38,8 @@ body {
 
 #app {
     position: relative;
+    width: 100%;
+    height: 100%;
 }
 
 /* HEADER */
