--- a/resources/css/front.css
+++ b/resources/css/front.css
@@ -36,8 +36,6 @@ body {
 
 #app {
     position: relative;
-    width: 100%;
-    height: 100%;
 }
 
 /* HEADER */
@@ -160,7 +158,7 @@ header.header-index {
     bottom: 0;
     z-index: 100;
     height: 100%;
-    width: 100%;
+    width: 90vw;
     background-color: rgba(76,51,228,0.92);
     /* animation-name: mobile-menu;
     animation-duration: 0.5s; */
