--- a/resources/css/front.css
+++ b/resources/css/front.css
@@ -199,6 +199,8 @@ header.header-index {
     display: block;
     text-align: right;
     width: 100%;
+    padding: 0;
+    margin: 0;
 }
 /* HEADER */
 
