--- a/public/css/front.css
+++ b/public/css/front.css
@@ -194,6 +194,8 @@ header.header-index {
     text-transform: uppercase;
 }
 .mobile-menu-close {
+    position: absolute;
+    right: 15px;
     box-shadow: none;
     border: 0;
     background: none;
@@ -202,7 +204,6 @@ header.header-index {
     font-weight: 100;
     color: #fff;
     z-index: 110;
-    display: block;
     text-align: right;
     width: 100%;
     padding: 0;
