--- a/public/css/front.css
+++ b/public/css/front.css
@@ -160,11 +160,14 @@ header.header-index {
     bottom: 0;
     z-index: 100;
     height: 100%;
-    width: 90vw;
+    width: 100%;
+    padding: 35px;
+    padding-top: 70px;
     background-color: rgba(76,51,228,0.92);
-    /* animation-name: mobile-menu;
-    animation-duration: 0.5s; */
-    display: block !important;
+    -webkit-animation-name: mobile-menu;
+            animation-name: mobile-menu;
+    -webkit-animation-duration: 0.5s;
+            animation-duration: 0.5s;
 }
 @-webkit-keyframes mobile-menu {
     from {right: -100%;}
@@ -195,6 +198,7 @@ header.header-index {
 }
 .mobile-menu-close {
     position: absolute;
+    top: 0;
     right: 15px;
     box-shadow: none;
     border: 0;
