--- a/public/css/front.css
+++ b/public/css/front.css
@@ -525,7 +525,7 @@ header.header-index {
 
 /* INDEX CATALOG */
 .catalog {
-  padding: 50px 20px;
+  padding: 50px 30px;
   background-color: #4c33e4;
   position: relative;
   z-index: 0;
@@ -623,6 +623,32 @@ header.header-index {
         width: auto;
         margin: 0 10px;
 	}
+}
+
+.catalog .swiper-button-prev,
+.catalog .swiper-rtl .swiper-button-next {
+  left: 0px;
+}
+@media (min-width: 992px) {
+	.catalog .swiper-button-prev,
+    .catalog .swiper-rtl .swiper-button-next {
+        left: 12px;
+	}
+}
+.catalog .swiper-button-next,
+.catalog .swiper-rtl .swiper-button-prev {
+  right: 0;
+}
+@media (min-width: 992px) {
+	.catalog .swiper-button-next,
+    .catalog .swiper-rtl .swiper-button-prev {
+        right: 12px;
+	}
+}
+.catalog .swiper-button-next:after,
+.catalog .swiper-button-prev:after {
+  font-size: 30px;
+  color: #fff;
 }
 /* INDEX CATALOG */
 
